Bug Fix: error on text alignment

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -16,8 +16,3 @@
   justify-content: center;
   align-items: center;
 }
-
-.center-content {
-  position: absolute;
-  top: 40vh;
-}
