--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -23,5 +23,5 @@
 }
 
 .yellow {
-  color: yellow;
+  color: rgb(255, 191, 0);
 }
